--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
            <div class="info-box">
               <div class="email-info">
                   <h5>Email or phone No:</h5>
-                  <span>nrsuriya093@gmail.com</span>
+                  <span>portcreators@gmail.com</span>
                   <br>
-                  <span>  +92 321-2015419</span>
+                  <span>  +92 331 384 9088</span>
               </div>
            </div>
           <div class="social-icon">
@@ -202,7 +202,7 @@
           </h2>
           <h3 class="project-sub-title">Website.
           </h3>
-            <img src="img/e-commerce pic - Copy.png" alt="" style="width: 100%; height: 50vh;">
+            <img src="./img/e-commerce pic - Copy.png" alt="" style="width: 100%; height: 50vh;">
           <div class="buttons">
  
             <a href="https://e-commerce-code-with-rabia.web.app" class="primary-btn outline external-link"> <span>Preview</span>
